--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "psr-4": {"Luyo\\Stock\\": "libs/"}
     },
     "require": {
+        "php": "^7.1",
         "phpmailer/phpmailer": "^6.0"
     }
 }
